--- a/cloudguard-management/terraform.tfvars.template
+++ b/cloudguard-management/terraform.tfvars.template
@@ -6,4 +6,6 @@ compute_compartment_ocid = "ocid1.compartment.oc1."
 network_compartment_ocid = "ocid1.compartment.oc1."
 region = "us-ashburn-1"
 availability_domain_number = "1"
-ssh_public_key = "ssh-rsa AAA...H
+ssh_public_key = "ssh-rsa AAA...H"
+admin_password_hash = "$1.."
+maintenance_mode_password_hash = "grub.."
