Update single gw files for terraform

--- a/cloudguard-ngfw/terraform.tfvars.template
+++ b/cloudguard-ngfw/terraform.tfvars.template
@@ -7,4 +7,6 @@ network_compartment_ocid = "ocid1.compartment.oc1."
 region = "us-ashburn-1"
 availability_domain_number = "1"
 ssh_public_key = "ssh-rsa AAA...H"
-sic_key="
+sic_key = ""
+admin_password_hash = "$1.."
+maintenance_mode_password_hash = "grub.."
