--- a/cloudguard-ha/terraform.tfvars.template
+++ b/cloudguard-ha/terraform.tfvars.template
@@ -8,3 +8,5 @@ region = "us-ashburn-1"
 availability_domain_number = "1"
 ssh_public_key = "ssh-rsa AAA...H"
 sic_key = ""
+admin_password_hash = "$1.."
+maintenance_mode_password_hash = "grub.."
