--- a/cloudguard-ngfw/marketplace.yaml
+++ b/cloudguard-ngfw/marketplace.yaml
@@ -1,9 +1,9 @@
 # Title shown in Application Information tab.
-title: CloudGuard IaaS Next-Gen Firewall with Threat Prevention and SandBlast - BYOL
+title: CloudGuard Network Security Gateway with Threat Prevention and SandBlast - BYOL
 # Sub Title shown in Application Information tab.
 description: Advanced Threat Prevention for OCI and Hybrid Cloud Environments with Threat Extraction + Emulation
 schemaVersion: 1.1.0
-version: "20200104"
+version: "20250508"
 
 # URL of Logo Icon used on Application Information tab. Logo must be 130x130 pixels.
 # (Optional)
@@ -36,6 +36,9 @@ variableGroups:
       - template_name
       - template_version
       - instance_launch_options_network_type
+      - installation_type
+      - os_version
+      - template_type
 
   - title: "Compute Configuration"
     variables:
@@ -54,11 +57,13 @@ variableGroups:
       - vcn_display_name 
       - vcn_cidr_block 
       - vcn_dns_label            
-      - subnet_type 
       - subnet_span 
-      - subnet_id 
-      - subnet_display_name       
-      - subnet_cidr_block      
+      - public_subnet_id
+      - public_subnet_display_name      
+      - public_subnet_cidr_block    
+      - private_subnet_id 
+      - private_subnet_display_name
+      - private_subnet_cidr_block
       - subnet_dns_label
 
   - title: "Additional Configuration"
@@ -69,6 +74,10 @@ variableGroups:
       - allow_upload_download
       - shell
       - sic_key
+      - admin_password_hash
+      - maintenance_mode_password_hash
+      - hostname
+      - enable_metrics
 
 variables:
   # Hidden variables
@@ -109,7 +118,8 @@ variables:
     type: string
     required: true
     title: Public SSH Key string
-    description: Public SSH Key to access VM via SSH
+    description: Public SSH Key to access VM via SSH. It should start with ssh-rsa.
+    pattern: "ssh-rsa AAAA(?:[A-Za-z0-9+\/]{4})*(?:[A-Za-z0-9+\/]{2}==|[A-Za-z0-9+\/]{3}=|[A-Za-z0-9+\/]{4})( [^@]+@[^@]+)?"
 
   vm_display_name:
     type: string
@@ -184,20 +194,6 @@ variables:
     required: true
     default: "Create New VCN and Subnet"
 
-  subnet_type:
-    visible: #($network_strategy  == ""Create New VCN and Subnet"")
-      eq:
-        - network_strategy 
-        - "Create New VCN and Subnet"
-    type: enum
-    title: Subnet Type
-    description: Choose between private and public subnets
-    enum:
-      - "Private Subnet"
-      - "Public Subnet"
-    required: true
-    default: "Public Subnet"
-
   subnet_span:
     visible: #($network_strategy  == ""Create New VCN and Subnet"")
       eq:
@@ -247,18 +243,18 @@ variables:
     title: VCN CIDR BLOCK
     description: The CIDR of the new Virtual Cloud Network (VCN). If you plan to peer this VCN with another VCN, the VCNs must not have overlapping CIDRs.
 
-  subnet_display_name:
+  public_subnet_display_name:
     visible: #($network_strategy  == ""Create New VCN and Subnet"")
       eq:
         - network_strategy 
         - "Create New VCN and Subnet"
     type: string
-    default: my-subnet
+    default: public-subnet
     required: true
-    title: Subnet
-    description: The name of the new Subnet
+    title: Public Subnet
+    description: The name of the new public Subnet
 
-  subnet_cidr_block:
+  public_subnet_cidr_block:
     visible: #($network_strategy  == ""Create New VCN and Subnet"")
       eq:
         - network_strategy 
@@ -267,10 +263,10 @@ variables:
     default: 10.0.0.0/24
     pattern: "^(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9]).(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9]).(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9]).(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9])\\/(3[0-2]|[1-2]?[0-9])$"
     required: true
-    title: Subnet CIDR
-    description: The CIDR of the new Subnet. The new subnet's CIDR should not overlap with any other subnet CIDRs.
+    title: Public Subnet CIDR
+    description: The CIDR of the new public Subnet. The new subnet's CIDR should not overlap with any other subnet CIDRs.
 
-  subnet_id:
+  public_subnet_id:
     visible: #($network_strategy  == "Use Existing VCN and Subnet")
       eq:
         - network_strategy 
@@ -281,8 +277,45 @@ variables:
       compartmentId: compartment_ocid 
     default: ''
     required: true
-    title: Existing Subnet
-    description: An existing subnet to use for compute instances. This subnet must already be present in the chosen VCN.
+    title: Existing Public Subnet
+    description: An existing public subnet to use for compute instances. This subnet must already be present in the chosen VCN.
+
+  private_subnet_display_name:
+    visible: #($network_strategy  == ""Create New VCN and Subnet"")
+      eq:
+        - network_strategy 
+        - "Create New VCN and Subnet"
+    type: string
+    default: private-subnet
+    required: true
+    title: Private Subnet
+    description: The name of the new private Subnet
+
+  private_subnet_cidr_block:
+    visible: #($network_strategy  == ""Create New VCN and Subnet"")
+      eq:
+        - network_strategy 
+        - "Create New VCN and Subnet"
+    type: string
+    default: 10.0.1.0/24
+    pattern: "^(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9]).(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9]).(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9]).(25[0-5]|2[0-4][0-9]|1[0-9][0-9]|[1-9]?[0-9])\\/(3[0-2]|[1-2]?[0-9])$"
+    required: true
+    title: Private Subnet CIDR
+    description: The CIDR of the new private Subnet. The new subnet's CIDR should not overlap with any other subnet CIDRs.    
+
+  private_subnet_id:
+    visible: #($network_strategy  == "Use Existing VCN and Subnet")
+      eq:
+        - network_strategy 
+        - "Use Existing VCN and Subnet"    
+    type: oci:core:subnet:id
+    dependsOn:
+      vcnId: vcn_id 
+      compartmentId: compartment_ocid 
+    default: ""
+    required: true
+    title: Existing Private Subnet
+    description: An existing private subnet to use for compute instances. This subnet must already be present in the chosen VCN.
 
   vcn_dns_label:
     visible: #($network_strategy  == ""Create New VCN and Subnet"")
@@ -306,6 +339,7 @@ variables:
     title: Subnet DNS Label
     description: Subnet DNS Label. Only letters and numbers, starting with a letter. 15 characters max.    
 
+  # Additional Configuration
   nsg_whitelist_ip:
     type: string
     required: true
@@ -357,6 +391,34 @@ variables:
     minLength: 12
     maxLength: 30
     pattern: "^[a-zA-Z0-9]*$"
+
+  admin_password_hash:
+    type: password
+    required: true
+    title: Password Hash for Instance
+    description: GW password hashed using MD5 based BSD password algorithm. Can be generated using 'openssl passwd -1 <my_password>'
+
+  maintenance_mode_password_hash:
+    type: password
+    required: true
+    title: Maintenance Mode Password Hash for Instance
+    description: Maintenance mode password hash. Can be generated by running 'grub2-mkpasswd-pbkdf2'
+
+  hostname:
+    type: string
+    required: false
+    title: Name for the Host on the Instance
+    description: Name for the shell on the machines
+
+  enable_metrics:
+    type: enum
+    required: true 
+    default: "true"
+    title: Enable CloudGuard metrics
+    description: Enable CloudGuard metrics in order to send statuses and statistics collected from instances to the OCI Monitor service.
+    enum:
+      - "true"
+      - "false"
     
 
 outputGroups:
